--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,22 @@ optional = [
     "vllm==0.8.5.post1",
     "flash-attn==2.8.3",
 ]
+oneflow = [
+    # Transfusion backbone deps (vendored under dllm/third_party/transfusion_pytorch)
+    "axial-positional-embedding>=0.3.5",
+    "beartype",
+    "einx>=0.3.0",
+    "einops>=0.8.0",
+    "ema-pytorch",
+    "hyper-connections>=0.3.11",
+    "jaxtyping",
+    "loguru",
+    "rotary_embedding_torch>=0.8.4",
+    "torchdiffeq",
+    # Optional but commonly used for image-latent VAE encode/decode in examples
+    "diffusers",
+    "torchvision",
+]
 rl = [
     "trl==0.26.0",
     "math_verify==0.8.0",
